# openturns

./: .gitignore  .mergify.yml  .travis.yml  AGENTS.md  AUTHORS  CITATION.cff  CMakeLists.txt  CMakePresets.json  COPYING.KolmogorovSmirnovDist  COPYING.cephes  COPYING.cobyla  COPYING.dsfmt  COPYING.ev3  COPYING.exprtk  COPYING.faddeeva  COPYING.fastgl  COPYING.hmat  COPYING.kendall  COPYING.poissinv  ChangeLog  ChangeLog.orig  LICENSE  NAISAlgorithm_TEST.py  NOTA_TUTO  NonStationaryCovarianceModelFactory.py  README.md  README.rst  TODO  VERSION  appveyor.yml  circle.yml  index.html  mpl.patch
lib/: CMakeLists.txt  Doxyfile.in  OpenTURNSConfig.cmake.in  UseOpenTURNS.cmake
lib/etc/: CMakeLists.txt  openturns.conf.in
lib/include/: CMakeLists.txt  OTconfig.h.in  OTconfig.hxx  OTconfigure_args.hxx.in  OTdebug.h  OTmemory.hxx  OTprivate.hxx  OTtestcode.hxx  OTthread.hxx  OTwindows.h  installed-OTconfig.h.in
lib/include/openturns/: GSobolUseCase.hxx  IshigamiUseCase.hxx  OTconfig.hxx  OTdebug.h  OTmemory.hxx  OTprivate.hxx  OTtestcode.hxx  OTthread.hxx  OTtypes.hxx  OTwindows.h
lib/include/pthread_win32/: pthread.h  semaphore.h  unistd.h
lib/src/: CMakeLists.txt  OT.hxx  bind.c  libOT-gdb.py  main.cxx  openturns-config-build.in  openturns_library_ok.c
lib/src/Base/: CMakeLists.txt  OTBase.hxx
lib/src/Base/Algo/: ApproximationAlgorithm.cxx  ApproximationAlgorithm.hxx  ApproximationAlgorithmImplementation.cxx  ApproximationAlgorithmImplementation.hxx  BoundingVolumeHierarchy.cxx  (+94 more)
lib/src/Uncertainty/: CMakeLists.txt  OTUncertainty.hxx
lib/src/openturns/: OT.hxx
lib/test/: CMakeLists.txt  TestIdentity.cxx  TestIdentity.xml  TestResponseSurface.cxx  TestResponseSurface.xml  external_code_threads.cxx  external_code_threads.xml  fonction_1.c  fonction_2.cxx  generic.cxx  generic.xml  minimal_wrapper.cxx  minimal_wrapper.xml  poutre.cxx  poutre.sh  poutre.xml  poutre_external_LINUX.xml  poutre_external_WIN32.xml  poutre_files.bat  poutre_files.sh  poutre_fullspeed.cxx  poutre_fullspeed.xml  poutre_sample.cxx  poutre_sample.xml  poutre_sample_no_retry.cxx  poutre_sample_no_retry.xml  poutre_threads.cxx  poutre_threads.xml  res  t_ANCOVA_std.cxx  t_ANCOVA_std.expout  t_ARMACoefficients_std.cxx  t_ARMACoefficients_std.expout  t_ARMALikelihoodFactory_std.cxx  t_ARMALikelihoodFactory_std.expout  t_ARMAState_std.cxx  t_ARMAState_std.expout  t_ARMA_std.cxx  t_ARMA_std.expout  t_AbdoRackwitz_linear.cxx  (+1360 more)
python/test/: CMakeLists.txt  poutre_external.xml  poutre_files.sh  t_ANCOVA_std.expout  t_ANCOVA_std.py  t_ARMACoefficients_std.expout  t_ARMACoefficients_std.py  t_ARMALikelihoodFactory_std.expout  t_ARMALikelihoodFactory_std.py  t_ARMAState_std.expout  t_ARMAState_std.py  t_ARMA_std.expout  t_ARMA_std.py  t_AbdoRackwitz_linear.expout  t_AbdoRackwitz_linear.py  t_AbdoRackwitz_nonlinear.expout  t_AbdoRackwitz_nonlinear.py  t_AbdoRackwitz_std.expout  t_AbdoRackwitz_std.py  t_AdaptiveDirectionalSampling_flood.expout  t_AdaptiveDirectionalSampling_flood.py  t_AdaptiveDirectionalSampling_hyperplane.expout  t_AdaptiveDirectionalSampling_hyperplane.py  t_AdaptiveDirectionalSampling_std.expout  t_AdaptiveDirectionalSampling_std.py  t_AdaptiveDirectionalStratification_flood.expout  t_AdaptiveDirectionalStratification_flood.py  t_AdaptiveDirectionalStratification_hyperplane.expout  t_AdaptiveDirectionalStratification_hyperplane.py  t_AdaptiveDirectionalStratification_std.expout  t_AdaptiveDirectionalStratification_std.py  t_AdaptiveStieltjesAlgorithm_std.expout  t_AdaptiveStieltjesAlgorithm_std.py  t_AggregatedEvaluation_std.expout  t_AggregatedEvaluation_std.py  t_AggregatedFunction_std.expout  t_AggregatedFunction_std.py  t_AggregatedNumericalMathEvaluationImplementation_std.py  t_AggregatedProcess_std.expout  t_AggregatedProcess_std.py  (+1538 more)
validation/src/: AbdoRackwitz.mws  AbdoRackwitz.txt  Airy.mw  AliMikhailHaq.mw  Analytical.mw  Bessel.mw  BurrFactory.mw  CMakeLists.txt  Cas1.mws  Cas1.txt  Cas1_eads.mws  Cas1_eads.txt  Cas2.mws  Cas2.txt  Cas3_eads.mws  Cas3_eads.txt  Cas4.mws  Cas4.txt  Cas5.mws  Cas5.txt  Cas6.mws  Cas6.txt  Cas7_eads.mws  Cas7_eads.txt  CoefficientOfVariation.mws  CoefficientOfVariation.txt  ComputeG1K3.mw  Curvature.mws  Curvature.txt  DataMultinomialCDF.mw  DebugLinearCombination.mw  Debye.mws  Debye.txt  DefaultDistribution.mws  DefaultDistribution.txt  DirectionalSampling.mws  DirectionalSampling.txt  Dirichlet.mw  DirichletCDF.mw  Ellipse.mw  (+311 more)
validation/src/KrigingGu/: Gu.py  ValidGuPython.py  ValidRobustGasp.py  compute_validation_values.py
validation/src/distributions/: README.md  binom.r
validation/src/optimal_lhs/: README  compute_spacefilling_perturbLHS.py  generate_lhs_nonunit_samples.py  generate_lhs_samples.py  result_valid_mc.txt  result_valid_sa.txt  space_filling_criteria_nonunit.val  space_filling_criteria_nonunit_ref.val  space_filling_criteria_perturbation_ref.val  space_filling_criteria_ref.val  validate_MC_big.py  validate_MC_small.py  validate_SA_big.R  validate_SA_big.py  validate_SA_small.R  validate_SA_small.py  validate_spacefilling_evaluate.R  validate_spacefilling_evaluate_nonunit.R  validate_spacefilling_perturbLHS.R
validation/src/sobol_estimator_variance/: .gitignore  convergence_stddev.py  convergence_stddev_old.py  convergence_variance.py  convergence_variance_old.py  gsobollib.py  ishigamilib.py  sensitivity_confidence.py  sensitivity_distribution.py  sobol_variance_estimators.py
wrappers/: CMakeLists.txt
wrappers/AnalyticalFunctionCompiler/: CMakeLists.txt
wrappers/AnalyticalFunctionCompiler/src/: AnalyticalFunctionCompiler.cxx  AnalyticalFunctionCompiler.hxx  CMakeLists.txt  CreateLibrary.cxx  CreateSourceCode.cxx  CreateWrapper.cxx  Main.cxx
wrappers/WrapperTemplates/wrapper_calling_shell_command/: CMakeLists.txt  code_C1.c  code_C1.data  customize  wcode.xml  wrapper.c
wrappers/WrapperTemplates/wrapper_linked_with_C_function/: CMakeLists.txt  myCFunction.c  myCFunction.h  wrapper.c
wrappers/WrapperTemplates/wrapper_linked_with_F77_function/: CMakeLists.txt  code.f  customize  test.py  wcode.xml  wrapper.c
(+7492 files in other folders)
